2003-05-19  Derek Price  <derek@ximbiot.com>

	* Makefile.am (SUBDIRS): Add m4 subdir.
	(ACLOCAL_AMFLAGS): Include m4 subdir when generating aclocal.m4.
	* acinclude.m4: Remove this file, moving contents into two files in the
	m4 subdirectory to ease maintenance.

	* Makefile.in: Regenerated.
	* aclocal.m4: Ditto.

2003-05-19  Derek Price  <derek@ximbiot.com>

	* cvsnt.mak: added rules and dependencies for log-buffer.[c,obj],
	socket-client.[c,obj], and rsh-client.[c,obj]
	(Patch from Anthon Pang <apang@telus.net>.)

2003-05-18  Larry Jones  <lawrence.jones@eds.com>

	* acinclude.m4 (CVS_FUNC_PRINTF_PTR): New test.
	* configure.in: Use it.
	* aclocal.m4: Regenerated.
	* config.h.in: Ditto.
	* configure: Ditto.

2003-05-09  Derek Price  <derek@ximbiot.com>

	* configure.in: Back out all the S_ISSOCK changes I just made and move
	the equivalent to lib/system.h.

	* configure.in: Regenerated.
	* config.h.in: Ditto.

2003-05-09  Derek Price  <derek@ximbiot.com>

	* acinclude.m4: set cvs_client_objects in order to support optional
	compilation of src/gssapi-client.c.
	* configure.in: AC_SUBST(cvs_client_objects).
	(Original patch from Alexey Mahotkin <alexm@hsys.msk.ru>.)

	* aclocal.m4: Regenerated.
	* configure: Ditto. 
	* Makefile.in: Ditto.

2003-05-09  Derek Price  <derek@ximbiot.com>

	* configure.in: Try again, with AC_TRY_LINK this time.

	* configure: Regenerated.

2003-05-09  Derek Price  <derek@ximbiot.com>

	* configure.in: Correct a typo in my last patch.

	* configure: Regenerated.

2003-05-09  Derek Price  <derek@ximbiot.com>

	* configure.in: Add some checks for S_ISSOCK to avoid a problem on
	SCO OpenServer 5.0.6a.
	(Reported by Boyd Lynn Gerber <gerberb@zenez.com>.)

	* config.h.in: Regenerated.
	* configure: Ditto.

2003-05-07  Derek Price  <derek@ximbiot.com>

	* BUGS: Add rsh-client.{h,c} to the note that I probably just broke the
	Windows build by comitting Alexey Mahotkin's patches.

2003-05-06  Derek Price  <derek@ximbiot.com>
